[package]
name = "anys-cid"
authors = ["Mivik <mivik@qq.com>"]
description = "Anys CID implementation"
keywords = ["anys", "p2p", "file-sharing", "hash"]
categories = ["cryptography"]
repository = "https://github.com/Mivik/anys-cid"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bs58 = "0.5.1"
bytes = "1.7.1"
bytes-varint = "1.0.3"
hex = "0.4.3"
sha2 = "0.10.8"
thiserror = "1.0.63"
